# noshow-iq-67759

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  model.pkl  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci-cd.yml  lint.yml
noshow_iq/: Dockerfile  api.py  docker-compose.yml  model.py  preprocess.py
tests/: test_all.py
