[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noshow_iq"
version = "0.1.0"
description = "Patient no-show prediction API"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pymongo",
    "scikit-learn",
    "imbalanced-learn",
    "pandas",
    "numpy",
    "joblib",
    "python-dotenv",
    "gunicorn",
]

[tool.setuptools.packages.find]
where = ["."]